--- a/client/src/components/EventCard.css
+++ b/client/src/components/EventCard.css
@@ -1,43 +1,89 @@
 .event-card {
-  border: 1px solid #ddd;
+  background-color: rgba(52, 52, 52, 0.5);
   border-radius: 8px;
-  padding: 16px;
+  width: calc(50% - 48px);
+  min-width: 300px;
+  height: 180px;
   margin: 12px;
-  background-color: #fff;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  max-width: 300px;
-  text-align: center;
-}
-
-.event-card h3 {
-  font-size: 1.5em;
-  margin-bottom: 8px;
-}
-
-.event-card p {
-  margin: 0 0 12px;
-  font-size: 1em;
-  color: #666;
-}
-
-.event-card .team-size,
-.event-card .price {
-  margin: 4px 0;
-  font-weight: bold;
-}
-
-.event-card button {
-  background-color: #4CAF50;
-  color: white;
-  border: none;
-  padding: 10px 16px;
-  text-align: center;
-  font-size: 16px;
+  display: flex;
+  align-items: center;
   cursor: pointer;
-  border-radius: 4px;
-  transition: background-color 0.3s ease;
+  transition: transform 0.2s;
+  color: white;
 }
 
-.event-card button:hover {
-  background-color: #45a049;
+.event-card:hover {
+  transform: translateY(-5px);
 }
+
+.icon-container {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2.5em;
+  color: white;
+  padding: 0 20px;
+  scale : 2.5;
+}
+
+.event-info {
+  flex: 2;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-right: 20px;
+}
+
+.event-info h3 {
+  margin: 0 0 8px 0;
+  font-size: 1.9em;
+  color: white;
+  align-self: center;
+}
+
+.event-details {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  color: #cccccc;
+}
+
+.team-size, .price {
+  display: flex;
+  align-items: center;
+  font-size: 1.3em;
+}
+
+.team-size svg, .price svg {
+  margin-right: 8px;
+  scale : 1.3;
+}
+
+@media screen and (max-width: 768px) {
+  .event-card {
+    width: 100%;
+    min-width: unset;
+    height: 150px;
+    margin: 10px 0;
+  }
+
+  .icon-container {
+    font-size: 2em;
+    scale: 1.5;
+  }
+
+  .event-info h3 {
+    font-size: 1.6em;
+  }
+
+  .event-details {
+    flex-direction: column;
+    gap: 8px;
+  }
+
+  .team-size, .price {
+    font-size: 1.1em;
+  }
+}
+
