--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -40,12 +40,13 @@ nav {
   top: 0;
   z-index: 1000;
   padding: 0 2rem;
+  font-size: 3vh;
 }
 
 .logo-container {
   position: relative;
   height: 12vh;
-  margin-top: 2vh;
+  margin-top: 6vh;
 }
 
 .logo {
@@ -90,6 +91,7 @@ nav {
   align-items: center;
   cursor: pointer;
   color: white;
+  margin-top: 5vh;
 }
 
 .cart-icon {
