--- a/client/src/pages/EventPage.css
+++ b/client/src/pages/EventPage.css
@@ -240,3 +240,12 @@
     font-size: 14px;
   }
 }
+
+.add-to-cart-btn.added {
+  background-color: #4CAF50;
+  color: white;
+}
+
+.add-to-cart-btn.added:hover {
+  background-color: #45a049;
+}
