--- a/client/src/components/EventCard.css
+++ b/client/src/components/EventCard.css
@@ -10,13 +10,24 @@
   cursor: pointer;
   transition: transform 0.2s;
   color: white;
+  position: relative;
+  overflow: hidden;
 }
 
 .event-card:hover {
   transform: translateY(-5px);
 }
 
-.icon-container { 
+.event-card.disabled {
+  cursor: not-allowed;
+  opacity: 0.7;
+}
+
+.event-card.disabled:hover {
+  transform: none;
+}
+
+.icon-container {
   flex: 1;
   display: flex;
   justify-content: center;
@@ -24,7 +35,7 @@
   font-size: 2.5em;
   color: white;
   padding: 0 20px;
-  scale : 2.5;
+  scale: 2.5;
 }
 
 .event-info {
@@ -57,7 +68,26 @@
 
 .team-size svg, .price svg {
   margin-right: 8px;
-  scale : 1.3;
+  scale: 1.3;
+}
+
+.status {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  padding: 5px 10px;
+  border-radius: 5px;
+  font-weight: bold;
+}
+
+.status.closed {
+  background-color: #B43839;
+  color: white;
+}
+
+.status.closing {
+  background-color: #FFA500;
+  color: black;
 }
 
 @media screen and (max-width: 768px) {
@@ -85,5 +115,8 @@
   .team-size, .price {
     font-size: 1.1em;
   }
-}
 
+  .status {
+    font-size: 0.8em;
+  }
+}
