--- a/client/src/pages/EventPage.css
+++ b/client/src/pages/EventPage.css
@@ -1,31 +1,48 @@
 .event-page {
-  padding: 40px 20px;
   max-width: 800px;
   margin: 0 auto;
   color: white;
+  position: relative;
+  padding-top: 60px;
 }
 
-.event-header {
+.event-poster-container {
+  width: 100%;
   display: flex;
-  align-items: center;
   justify-content: center;
-  margin-bottom: 30px;
+  margin-bottom: -80px;
 }
 
-.event-icon {
-  font-size: 3em;
-  margin-right: 20px;
-}
-
-.event-header h1 {
-  font-size: 2.5em;
-  margin: 0;
+.event-poster {
+  width: 100%;
+  height: auto;
+  border-radius: 12px 12px 0px 0px;
+  box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.3);
+  z-index: 1;
 }
 
 .event-content {
-  background-color: rgba(52, 52, 52, 0.5);
+  background-color: rgba(52, 52, 52, 0.9);
   border-radius: 12px;
   overflow: hidden;
+  padding-top: 100px;
+  position: relative;
+  z-index: 0;
+}
+
+.event-title {
+  text-align: center;
+  font-size: 2.5em;
+  margin: 0 0 30px;
+  padding: 0 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.event-icon {
+  margin-right: 10px;
 }
 
 .details-container {
@@ -164,6 +181,7 @@
   font-size: 1.2em;
   cursor: pointer;
   transition: background-color 0.3s;
+  border-radius: 0 0 12px 12px;
 }
 
 .add-to-cart-btn:hover {
@@ -186,37 +204,45 @@
   cursor: pointer;
   font-size: 16px;
   transition: background-color 0.3s;
+  z-index: 2;
 }
 
 .back-button:hover {
   background-color: #e0e0e0;
 }
 
-/* Ensure the event page has relative positioning for absolute positioning of back button */
-.event-page {
-  position: relative;
-  padding-top: 60px; /* Add some top padding to account for the back button */
-}
-
 @media screen and (max-width: 768px) {
   .event-page {
-    padding: 20px 10px;
-    padding-top: 60px;
+    padding: 60px 20px 20px;
   }
 
-  .event-header {
-    flex-direction: column;
-    text-align: center;
+  .event-poster {
+    width: 100%;
   }
 
-  .event-icon {
-    margin-right: 0;
-    margin-bottom: 10px;
+  .event-poster-container {
+    margin-bottom: -40px;
   }
 
-  .event-header h1 {
+  .event-content {
+    padding-top: 30px;
+  }
+
+  .event-title {
     font-size: 2em;
+    text-shadow: none;
+    background-color: rgba(0, 0, 0, 0.7);
+    padding: 10px;
+    border-radius: 8px;
+    margin-top: 20px;
+    position: relative;
+    z-index: 2;
+  
   }
+
+  .details-container {
+  margin-top: -40px;
+  } 
 
   .detail-row {
     flex-direction: column;
@@ -240,6 +266,8 @@
     font-size: 14px;
   }
 }
+
+
 
 .add-to-cart-btn.added {
   background-color: #4CAF50;
