--- a/client/src/pages/Success.css
+++ b/client/src/pages/Success.css
@@ -3,7 +3,8 @@
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-color: #28282B;
+    /* background-color: #28282B; */
+    background-color: black;
     color: white;
   }
   
@@ -13,7 +14,7 @@
   }
   
   .success-title {
-    font-size: 4rem;
+    font-size: 10rem;
     margin-bottom: 1rem;
     font-family: 'Dimitri', sans-serif;
     color: #ff4444;
