--- a/client/src/components/EventCard.css
+++ b/client/src/components/EventCard.css
@@ -71,13 +71,27 @@
   scale: 1.3;
 }
 
-.status {
+.status, .deadline {
   position: absolute;
-  top: 10px;
-  right: 10px;
   padding: 5px 10px;
   border-radius: 5px;
   font-weight: bold;
+  font-size: 0.8em;
+}
+
+.status {
+  top: 10px;
+  right: 10px;
+}
+
+.deadline {
+  bottom: 10px;
+  right: 10px;
+  background-color: rgba(255, 255, 255, 0.2);
+}
+
+.deadline.passed {
+  background-color: #B43839;
 }
 
 .status.closed {
@@ -116,9 +130,7 @@
     font-size: 1.1em;
   }
 
-  .status {
-    font-size: 0.8em;
+  .status, .deadline {
+    font-size: 0.7em;
   }
 }
-
-
